<resources>
    <string name="app_name">BringazzOkosan</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="button_start">Start</string>
    <string name="time">Time</string>
    <string name="_0_0_km_h">0.0 km/h</string>
    <string name="max_speed">Max Speed:</string>
    <string name="avg_speed">Avg Speed:</string>
    <string name="distance">Distance:</string>
    <string name="_0_0_km">0.0 km</string>
    <string name="duration">Duration:</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="km">km</string>
    <string name="mi">mi</string>
    <string name="km_h">km/h</string>
    <string name="mi_h">mi/h</string>
    <string name="stop">STOP</string>
    <string name="max">Max:</string>
    <string name="avg">Avg:</string>
    <string name="dis">Dis:</string>
    <string name="dur">Dur:</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="shareTitle">---Check my cycling---</string>
    <string name="shareWatermark">Sent by BringazzOkosan app</string>
    <string name="summImperial">Use imperial units instead of metric</string>
    <string name="titleImperial">Use Imperial units</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="summLanguage">Select the preferred language</string>
    <string name="exitMsg">Your datas will be lost!\n Are sure?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>

</resources>